# tree-sitter-mojo

./: .tsqueryrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  biome.json  go.mod  grammar.js  package-lock.json  package.json  parser.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  fuzz.yml
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mojo/: __init__.py
bindings/rust/: build.rs  lib.rs
examples/: compound-statement-without-trailing-newline.py  crlf-line-endings.py  multiple-newlines.py  simple-statements-without-trailing-newline.py  trailing-whitespace.py
nvim-queries/mojo/: highlights.scm
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/mojo/: MLIR.txt  errors.txt  expressions.txt  statements.txt
test/corpus/python/: errors.txt  expressions.txt  literals.txt  pattern_matching.txt  statements.txt
test/tags/: main.py
